[package]
name = "zara"
version = "0.1.0"
edition = "2021"
authors = ["Brandon Stansbury <brandonrstansbury@gmail.com"]
description = "An R7RS-small Scheme Interpreter"
license = "MIT"
repository = "https://github.com/drmonkeysee/Zara"

[profile.release]
lto = true
panic = "abort"
strip = true

[dependencies]
rustyline = "13.0.0"
