[package]
name = "zara"
version = "0.3.0"
edition = "2024"
authors = ["Brandon Stansbury <brandonrstansbury@gmail.com"]
description = "An R7RS-small Scheme Interpreter"
license = "MIT"
repository = "https://github.com/drmonkeysee/Zara"

[profile.release]
lto = true
panic = "abort"
strip = true

[dependencies]
rustyline = "15.0.0"
